fixed white space

--- a/public/main.css
+++ b/public/main.css
@@ -1,7 +1,8 @@
 
 html.landing-page, html.main-page {
-	width: 100%;
-	height: 100%;
+	position: absolute;
+	min-width: 100%;
+	min-height: 100%;
 	font-family: 'Lato', sans-serif;
 	color: #0a0c0f;
 	font-size: 1rem;
